--- a/02_10aula/index2.html
+++ b/02_10aula/index2.html
@@ -5,7 +5,6 @@
 
  </head>   
  <body>
-
     <div id="novoProduto">
         Cadastro de Novo Produto
     <table>
@@ -27,7 +26,6 @@
     </div>
 
     <div id="resposta"> </div>
-
     <div id="listaProdutos">
     <table border="1">
     <thead>
@@ -42,31 +40,22 @@
         </tr>
     </thead>
     <tbody id="resultadoTabela">
-        
+    <tr>
+        <td>1</td>
+        <td>7891000121212</td>
+        <td> Feijao </td>
+        <td>Candura</td>
+        <td>escolhido</td>
+        <td>6,00</td>
+        <td>
+            <button> Editar</button>
+        </td>  
+       <td>
+        <button onclick="excluirProduto">Excluir</button>
+       </td>      
+    </tr>
     </tbody>
     </table>
-
-    </div>
-
-
-    <div id="novoProduto">
-        Editar Produto
-    <table>
-        <tr>
-            <td><input type="text" id="novoidProduto" placeholder="ID"></td>
-            <td><input type="text" id="novoCodBarras" placeholder="Codigo de Barras"></td>
-        </tr>
-        <tr>
-            <td><input type="text" id="novoProduto" placeholder="Produto"></td>
-            <td><input type="text" id="novoMarca" placeholder="Marca"></td>
-        </tr>
-        <tr>
-            <td><input type="text" id="novoModelo" placeholder="Modelo"></td>
-            <td><input type="text" id="novoValor" placeholder="Valor"></td>
-        </tr>
-        <tr><td><button onclick="editarProduto();">Editar</button></td> </tr>
-    </table> 
-       
     </div>
 <script>
 
@@ -79,7 +68,7 @@ function fazerRequisicao(){
             exibirResultado(data);
         }
     };
-    xhr.open("GET","https://reserva.laboratorio.app.br:10100/produto",true);
+    xhr.open("GET","http://reserva.laboratorio.app.br:10100/produtos",true);
     xhr.send();
 }
 // Funçao para exibir os resultados na tabela
@@ -128,7 +117,7 @@ function cadastroProduto(){
     let valor = document.getElementById("valor").value;
 
     const dados = {
-        id : id,
+        id: id,
         codBarras : codBarras,
         produto : produto,
         marca : marca,
@@ -137,7 +126,7 @@ function cadastroProduto(){
     };
     console.log(dados);
     let envio = JSON.stringify(dados);
-    xhr.open("POST", "https://reserva.laboratorio.app.br:10100/produto",true);
+    xhr.open("POST", "http://reserva.laboratorio.app.br:10100/produto",true);
     xhr.setRequestHeader("Content-Type","application/json;charset=utf-8");
     xhr.send(envio);
 
@@ -149,10 +138,7 @@ function cadastroProduto(){
     document.getElementById("valor").value = '';
 
 }
-
-
-// aqui para excluir o produto
-
+// aqui para excluir o produto 
 function excluirProduto(idProduto){
     var xhr = new XMLHttpRequest();
     xhr.onreadystatechange = function (){
@@ -161,52 +147,10 @@ function excluirProduto(idProduto){
             fazerRequisicao();
         }
     };
-    xhr.open("DELETE", "https://reserva.laboratorio.app.br:10100/produto"+idProduto,true);
+    xhr.open("DELETE", "http://reserva.laboratorio.app.br:10100/produto/"+idProduto,true);
     xhr.send();
 
 }
-
-// Editar os produtos
-
-function EditarProduto(id){
-    var xhr = new XMLHttpRequest();
-    xhr.onreadystatechange = function (){
-        if (xhr.readyState === 4 && xhr.status === 200){
-            document.getElemntById("resposta").value = xhr.responseText;
-            fazerRequisicao();
-        }
-    };
-    let id = document.getElementById("novoidProduto").value;
-    let codBarras = document.getElementById("novoCodBarras").value;
-    let produto = document.getElementById("novoProduto").value;
-    let marca = document.getElementById("novoMarca").value;
-    let modelo = document.getElementById("novoModelo").value;
-    let valor = document.getElementById("novoValor").value;
-
-    const dados = {
-        id: id,
-        codBarras : codBarras,
-        produto : produto,
-        marca : marca,
-        modelo : modelo,
-        valor: valor
-    };
-    console.log(dados);
-    let envio = JSON.stringify(dados);
-    xhr.open("PUT", "https://reserva.laboratorio.app.br:10100/produto",true);
-    xhr.setRequestHeader("Content-Type","application/json;charset=utf-8");
-    xhr.send(envio);
-
-    document.getElementById("novoidProduto").value = '';
-    document.getElementById("novoCodBarras").value = '';
-    document.getElementById("novoProduto").value = '';
-    document.getElementById("novoMarca").value = '';
-    document.getElementById("novoModelo").value = '';
-    document.getElementById("novoValor").value = '';
-
-}
-
-
 </script>
 
 </body>
